Run 15 of the Maven top-20 corpus locks nineteen repositories and builds eleven, TheAlgorithms-Java green through its tests again and java-design-patterns, nacos, jenkins and keycloak past their lint and compiler-level walls, while zipkin loses its build to a -J compiler argument the import now carries into an in-process javac, spring-cloud-alibaba's business-service fails javac with no diagnostic, and floci's build took the 256 MB engine down with a heap dump